// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu opens and closes on click 1`] = `
<div
  class="StyledDrop-bCWxPe eTlFvx"
  tabindex="-1"
  id="test-menu__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
  >
    <button
      class="StyledButton-gXzblK eCeZBH"
      aria-label="Close Menu"
      type="button"
    >
      <div
        class="StyledBox-bStriS kMKXvj"
        direction="row"
      >
        <span
          class="StyledText-eJMSZI ehbxjF"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs ctEUP"
          direction="row"
        />
        <svg
          class="StyledIcon-gTfjEw htxeRg"
          width="24px"
          height="24px"
          viewBox="0 0 24 24"
          version="1.1"
          role="img"
          aria-label="FormDown"
          color="brand"
        >
          <polyline
            fill="none"
            stroke="#000"
            stroke-width="2"
            points="18 9 12 15 6 9"
          />
        </svg>
      </div>
    </button>
    <div
      class="StyledBox-bStriS dFjuei"
      direction="column"
    >
      <button
        class="StyledButton-gXzblK gqMHaF"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-bStriS qtlmp"
          direction="row"
        >
          Item 1
        </div>
      </button>
      <button
        class="StyledButton-gXzblK faBScD"
        type="button"
      >
        <div
          class="StyledBox-bStriS qtlmp"
          direction="row"
        >
          Item 2
        </div>
      </button>
      <a
        class="StyledButton-gXzblK faBScD"
        href="/test"
      >
        <div
          class="StyledBox-bStriS qtlmp"
          direction="row"
        >
          Item 3
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Menu opens and closes on click 2`] = `
"@media only screen and (max-width:699px) {
  .kMKXvj {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kMKXvj {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .qtlmp {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .qtlmp {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eCeZBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .gqMHaF {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.eTlFvx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;

exports[`Menu renders 1`] = `
<div>
  <button
    class="StyledButton-gXzblK kGZImI"
    id="test-menu"
    aria-label="Open Menu"
    type="button"
  >
    <div
      class="StyledBox-bStriS kMKXvj"
      direction="row"
    >
      <span
        class="StyledText-eJMSZI ehbxjF"
      >
        Test Menu
      </span>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs ctEUP"
        direction="row"
      />
      <svg />
    </div>
  </button>
</div>
`;

exports[`Menu with custom message renders 1`] = `
<div>
  <button
    class="StyledButton-gXzblK kGZImI"
    aria-label="Abrir Menu"
    type="button"
  >
    <div
      class="StyledBox-bStriS kMKXvj"
      direction="row"
    >
      <span
        class="StyledText-eJMSZI ehbxjF"
      >
        Test Menu
      </span>
      <div
        class="StyledBox__StyledBoxGap-ixLlSs ctEUP"
        direction="row"
      />
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
        color="brand"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu with dropAlign renders 1`] = `
<div
  class="StyledDrop-bCWxPe dRgAcx"
  tabindex="-1"
  id="test-menu__drop"
  target="[object Object]"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS dFjuei"
    direction="column"
  >
    <button
      class="StyledButton-gXzblK eCeZBH"
      aria-label="Close Menu"
      type="button"
    >
      <div
        class="StyledBox-bStriS kMKXvj"
        direction="row"
      >
        <span
          class="StyledText-eJMSZI ehbxjF"
        >
          Test
        </span>
        <div
          class="StyledBox__StyledBoxGap-ixLlSs ctEUP"
          direction="row"
        />
        <svg
          class="StyledIcon-gTfjEw htxeRg"
          width="24px"
          height="24px"
          viewBox="0 0 24 24"
          version="1.1"
          role="img"
          aria-label="FormDown"
          color="brand"
        >
          <polyline
            fill="none"
            stroke="#000"
            stroke-width="2"
            points="18 9 12 15 6 9"
          />
        </svg>
      </div>
    </button>
    <div
      class="StyledBox-bStriS dFjuei"
      direction="column"
    >
      <button
        class="StyledButton-gXzblK gqMHaF"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-bStriS qtlmp"
          direction="row"
        >
          Item 1
        </div>
      </button>
      <button
        class="StyledButton-gXzblK gqMHaF"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-bStriS qtlmp"
          direction="row"
        >
          Item 2
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Menu with dropAlign renders 2`] = `
"@media only screen and (max-width:699px) {
  .kMKXvj {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .kMKXvj {
    padding: 6px;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .dFjuei {
    padding: 0;
  }
}

@media only screen and (max-width:699px) {
  .qtlmp {
    margin: 0;
  }
}

@media only screen and (max-width:699px) {
  .qtlmp {
    padding: 6px;
  }
}

@media only screen and (min-width:700px) {
  .kGZImI {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eCeZBH {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .gqMHaF {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .faBScD {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .kZkhbU {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.dRgAcx {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #444444;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #444444;
  opacity: 0;
  -webkit-transform-origin: top right;
  -ms-transform-origin: top right;
  transform-origin: top right;
  -webkit-animation: jNdvGQ 0.1s forwards;
  animation: jNdvGQ 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}"
`;
